<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.corypotwin.movieapp.MovieDetailsFragment">


    <TextView
        android:id="@+id/title"
        android:text="@string/no_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:background="#3F51B5"
        />

    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster_detail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/no_image_available_black"
            android:padding="8dp"
            android:contentDescription="Movie Poster" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/release_date"
                android:text="@string/no_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium"

                />

            <TextView
                android:id="@+id/rating"
                android:text="@string/no_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceSmall"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_favorite"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="1"
                android:stepSize="1"
                android:id="@+id/favorite_star"
                android:onClick="favoriteClick"
                />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/description"
        android:text="@string/no_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        />

    <ImageView
        android:id="@+id/trailer_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/no_image_available_black"
        android:padding="16dp"
        android:contentDescription="Movie Poster" />

    <TextView
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/reviews"
        android:text="@string/no_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

</ScrollView>